fix several deprecation and inspection issues